@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.alfresco.activiti</groupId>
 		<artifactId>aps-project</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.0.5</version>
 	</parent>
 
 	<dependencyManagement>
@@ -100,6 +100,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<scope>test</scope>
@@ -143,223 +148,6 @@
 			<version>${opencsv.version}</version>
 		</dependency>
 	</dependencies>
-
-	<profiles>
-		<profile>
-			<id>aps2.1.0</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>aspose-transformation</artifactId>
-					<version>${aps.version}</version>
-					<scope>provided</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-		<profile>
-			<id>aps2.0.1</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>aspose-transformation</artifactId>
-					<version>${aps.version}</version>
-					<scope>provided</scope>
-				</dependency>
-			</dependencies>
-		</profile>
-		<profile>
-			<id>aps1.11.4</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>aps1.11.0</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>aps1.10.0</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>aps1.9.0.5</id>
-			<dependencies>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-spring</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>com.activiti</groupId>
-					<artifactId>activiti-engine</artifactId>
-					<version>${activiti.version}</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>junit</groupId>
-					<artifactId>junit</artifactId>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
-			<build>
-				<plugins>
-					<plugin>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>
-								--illegal-access=permit
-							</argLine>
-						</configuration>
-						<executions>
-							<execution>
-								<goals>
-									<goal>integration-test</goal>
-									<goal>verify</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
 
 	<build>
 		<pluginManagement>
@@ -437,7 +225,7 @@
 							<descriptors>
 								<descriptor>src/main/assembly/assembly.xml</descriptor>
 							</descriptors>
-							<!-- if you have special character issues, this is an option to play 
+							<!-- if you have special character issues, this is an option to play
 								with. not required in most cases -->
 							<!-- <archiverConfig> <encoding>UTF-8</encoding> </archiverConfig> -->
 						</configuration>
